cursive-bootstrap/tests/ui/E-CON/E-CON-0070.cursive
// RUN: compile-fail
// DIAG: E-CON-0070
// SPEC: 8.9
// DESC: Write operation in # block without write modifier

record Counter {
    value: i32
}

procedure write_without_modifier(c: shared Counter) -> () {
    # c {
        c.value = 10  //~ ERROR E-CON-0070: write without write modifier
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
